// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render item as disabled 1`] = `
<div
  class="item disabled"
  role="button"
>
  <span
    class="buttons"
  />
  <span
    class="text"
  >
    <div
      aria-label="Test"
      class="croppedText"
      title="Test"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        Te
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          st
        </span>
      </div>
      <div
        class="whole"
      >
        Test
      </div>
    </div>
  </span>
  <span
    class="children"
  />
</div>
`;

exports[`Should render item as not selected by default 1`] = `
<div
  class="item"
  role="button"
>
  <span
    class="buttons"
  />
  <span
    class="text"
  >
    <div
      aria-label="Test"
      class="croppedText"
      title="Test"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        Te
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          st
        </span>
      </div>
      <div
        class="whole"
      >
        Test
      </div>
    </div>
  </span>
  <span
    class="children"
  />
</div>
`;

exports[`Should render item as selected 1`] = `
<div
  class="item selected"
  role="button"
>
  <span
    class="buttons"
  />
  <span
    class="text"
  >
    <div
      aria-label="Test"
      class="croppedText"
      title="Test"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        Te
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          st
        </span>
      </div>
      <div
        class="whole"
      >
        Test
      </div>
    </div>
  </span>
  <span
    class="children"
  />
</div>
`;

exports[`Should render item with indicators 1`] = `
<div
  class="item"
  role="button"
>
  <span
    class="buttons"
  />
  <span
    class="text"
  >
    <div
      aria-label="Test with indicators"
      class="croppedText"
      title="Test with indicators"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        Test with 
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          indicators
        </span>
      </div>
      <div
        class="whole"
      >
        Test with indicators
      </div>
    </div>
  </span>
  <span
    class="indicator"
  >
    <span>
      ghost
    </span>
  </span>
  <span
    class="indicator"
  >
    <span>
      shadow
    </span>
  </span>
  <span
    class="children"
  />
</div>
`;
